--- a/note_linear_regression.ipynb
+++ b/note_linear_regression.ipynb
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1570.2\n"
+      "Rata-rata x :  1570.2\n"
      ]
     }
    ],
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "273.0\n"
+      "Rata-rata y :  273.0\n"
      ]
     }
    ],
