Fix markdown error

--- a/note_linear_regression.ipynb
+++ b/note_linear_regression.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "Berapa harga tanah jika area adalah 752 ?\n",
     "\n",
-    "Langkah-langkah untuk menghitung regresi linear pada data univariat :\n",
+    "Langkah-langkah untuk menghitung regresi linear pada data univariat :<br>\n",
     "1.Hitung rata-rata x (kolom area)"
    ]
   },
